codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_pets_picker.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Avatar Wheel
  Previewing: idle

  [Idle]  R  T  W  V  F  P  Ti  Tr

  Type to filter avatars...
  Disable terminal pets
  BSOD                   A tiny blue-screen
                         gremlin
› Codex                  The original Codex
                         companion                    Loading preview...
  Dewey                  A tidy duck for calm
                         workspace days
  Fireball               Hot path energy for
                         fast iteration
  Null Signal            Quiet signal from the
                         void
  Rocky                  A steady rock when
                         the diff gets large
  Seedy                  Small green shoots
                         for new ideas

  ↑/↓ avatar · ←/→ state · enter select · esc cancel
